--- a/servicios.html
+++ b/servicios.html
@@ -114,7 +114,7 @@
   
   <div class=" serv1 px-5">
     <div class="row ">
-     <div class="col-lg-5 py-5 border border-black" style="padding-left: 3%;"><img src="imagenes/DSC4736-768x512.jpg" alt="" class="d-flex img-fluid " width="500px"></div>
+     <div class="col-lg-5 py-5" style="padding-left: 3%;"><img src="imagenes/DSC4736-768x512.jpg" alt="" class="d-flex img-fluid " width="500px"></div>
      <div class="col-lg-6">
       <p class="textserv1 mt-5" style="padding-bottom: 10%;">
         Mantenemos los ambientes estéticamente limpios e higienizados.<br> 
